test/extern/ferguson/externblock/two-modules-error.good
two-modules-error.chpl:14: error: Symbol 'y' undeclared in module 'A'
two-modules-error.chpl:17: error: Symbol 'y' undeclared in module 'A'
